--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -254,8 +254,8 @@ ul li{
   width: 100%;
   height: 100vh;
 
-  /* background: url("../img/Untitled\ design.jpg") ; */
-background-image: linear-gradient(rgba(21, 1, 1, 0.76),rgba(23, 1, 1, 0.783)),url("../img/Untitled\ design.jpg");
+   background: url("../img/m1.png") top center;
+/* background-image: linear-gradient(rgba(21, 1, 1, 0.76),rgba(23, 1, 1, 0.783)),url("../img/Untitled\ design.jpg"); */
   background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
